# com_exe_practice

./: .gitignore  CMakeLists.txt  README.md  index.html  license.html  license.txt
assets/: style.css
docs/: documentation.html  tutorials.html
include/COM_EXE_PRACTICE/: internal.hpp
include/cpp_template/: internal.hpp
lib/: .gitignore
tests/: CMakeLists.txt
tests/g_tests/: CMakeLists.txt
tests/vs_tests/: CMakeLists.txt
tests/vs_tests/src/: stdafx.cpp  unittests.cpp
